# SandPileModel

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
lib/: CMakeLists.txt  getdata.cpp  getdata.h  imagegenerator.cpp  imagegenerator.h  parser.cpp  parser.h  sandpile.cpp  sandpile.h
